--- a/package.json
+++ b/package.json
@@ -6,8 +6,20 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@babel/core": "^7.25.2",
+        "@babel/preset-env": "^7.25.4",
         "axios": "^1.6.4",
+        "babel-loader": "^9.1.3",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^1.0.0",
-        "vite": "^5.0.0"
+        "vite": "^5.0.0",
+        "webpack": "^5.94.0",
+        "webpack-cli": "^5.1.4",
+        "webpack-node-externals": "^3.0.0"
+    },
+    "dependencies": {
+        "@deriv/deriv-api": "^1.0.15",
+        "rxjs": "^7.8.1",
+        "ws": "^8.18.0"
     }
 }
